# cmake-hello-world

./: CMakeLists.txt  README.md  main.cpp
02-shared-library/: CMakeLists.txt
02-shared-library/lib-src/: hello.cpp  hello.h
03-boost-examples/: CMakeLists.txt  main.cpp
04-file-operations/: CMakeLists.txt  main.cpp
05-cpp-collection/: CMakeLists.txt  main.cpp
cpp-examples/: CMakeLists.txt
cpp-examples/include/: list_op.h  reference_op.h  string_operation.h
cpp-examples/src/: list_op.cpp  main.cpp  reference_demo.cpp  string_operation.cpp
